@@ -113,8 +113,7 @@ ADD_CUSTOM_TARGET(upload
     COMMENT "Uploading all files"
     )
 
-MANAGE_UPLOAD_FEDORAHOSTED(upload_fedorahosted_src 
-    UPLOAD_FILES ${SOURCE_ARCHIVE_FILE})
+MANAGE_UPLOAD_FEDORAHOSTED(upload_fedorahosted_src)
 ADD_DEPENDENCIES(upload upload_fedorahosted_src)
 
 ####################################################################
@@ -132,7 +131,8 @@ ADD_CUSTOM_TARGET_COMMAND(module-only
     )
 
 MANAGE_UPLOAD_FEDORAHOSTED(upload_fedorahosted_modules 
-    UPLOAD_FILES ${MODULE_ONLY_ARCHIVE} ${MODULE_ONLY_LATEST_ARCHIVE})
+    UPLOAD_FILES ${MODULE_ONLY_ARCHIVE} ${MODULE_ONLY_LATEST_ARCHIVE}
+    )
 ADD_DEPENDENCIES(upload upload_fedorahosted_modules)
 
 ####################################################################
