@@ -1,6 +1,6 @@
 # - Manage upload source archive to hosting site
 # cmake-fedora can upload source archive to hosting site by
-# scp, sftp or any other command
+# scp, sftp or any other command.
 #
 # Included Modules:
 #   - ManageMessage
@@ -8,53 +8,145 @@
 #
 # This module defines following functions:
 #   MANAGE_UPLOAD_TARGET(<targetName> 
-#       [COMMAND <program> ... ] 
-#       [<add custom target options ...>]
+#       COMMAND <program> ... 
+#       [COMMENT <comment>]
+#       [ADD_CUSTOM_TARGET_ARGS <arg> ...]
 #     )
 #     - Make an upload target using arbitrary command.
 #       If COMMAND program exists the target <targetName> will be created;
 #       if not, a M_OFF message is shown and target will not be created.
-#     Parameters:
-#     + targetName: target name in make.
-#     + program: Program that does upload.
-#     + ADD_CUSTOM_TARGET_ARGUMENTS: Other ADD_CUSTOM_TARGET_ARGUMENTS
+#       * Parameters:
+#         + targetName: target for use this command.
+#         + COMMAND program ... : Upload command and arguments
+#         + COMMENT comment (Optional) Comment when target is being built.
+#           Default: "<targetName>: Upload with <program> ..."
+#         + ADD_CUSTOM_TARGET_ARGS <arg> ...: (Optional) Other arguments to be 
+#             passed to ADD_CUSTOM_TARGET.
+#       * Targets:
+#         + <targetName>
 #
-#   MANAGE_UPLOAD_SCP(targetName 
-#     [USER user] [HOST_URL url] [UPLOAD_FILES files]
-#     [REMOTE_DIR dir] [OPTIONS options] [DEPENDS files]
-#     [COMMENT comments])
-#   - Make an upload target using scp.
-#     This macro check whether scp exist,
-#     if program exists, then add the make target, if not, produce M_OFF warning.
-#     Parameters:
-#     + targetName: target name in make.
-#     + USER user: scp user. Note that if USER is used but user is not defined.
-#       It produces M_OFF warning.
-#     + HOST_URL url: scp server.
-#     + UPLOAD_FILES: Files to be uploaded. This will be in DEPENDS list.
-#     + REMOTE_DIR dir: Directory on the server.
-#     + OPTIONS options: scp options.
-#     + DEPENDS files: other files that should be in DEPENDS list.
-#     + COMMENT comments: Comment to be shown when building the target.
+#   MANAGE_UPLOAD_SCP(<targetName> 
+#       HOST_URL <url>
+#       [USER <user>]  [UPLOAD_FILES <file> ...] [DEPENDS <file> ...]
+#       [REMOTE_DIR <dir>] [OPTIONS <options>]
+#       [COMMENT <comment>]
+#       [ADD_CUSTOM_TARGET_ARGS <arg> ...]
+#     )
+#     - Make an upload target using scp. 
+#       This functions check whether scp exists, see MANAGE_UPLOAD_TARGET 
+#       for detailed behavior.
+#       * Parameters:
+#         + targetName: target for use this command.
+#         + HOST_URL url: scp server.
+#         + USER user: (Optional) scp user.
+#           Default: Environment variable $USER.
+#         + UPLOAD_FILES file ... : (Optional) Files to be uploaded.
+#             This will also tell cmake the build to those files,
+#             thus, <targetName> depends on those files.
+#           Default: ${SOURCE_ARCHIVE_FILE}
+#         + DEPENDS file ...: (Optional) Files that <targetName> should depends on,
+#             but no need to upload.
+#         + REMOTE_DIR dir: (Optional) Directory on the server.
+#         + OPTIONS options: (Optional) scp options.
+#         + COMMENT comment (Optional) Comment when target is being built.
+#           Default: "<targetName>: Upload with scp [<options>] user@url:dir/file1 ..."
+#         + ADD_CUSTOM_TARGET_ARGS <arg> ...: (Optional) Other arguments to be 
+#             passed to ADD_CUSTOM_TARGET.
+#       * Targets:
+#         + <targetName>
 #
-#   MANAGE_UPLOAD_SFTP(targetName 
-#     [BATCH batchFile] [USER user] [HOST_URL url] [UPLOAD_FILES files]
-#     [REMOTE_DIR dir] [OPTIONS options] [DEPENDS files]
-#     [COMMENT comments])
-#   - Make an upload target using sftp.
-#     This macro check whether sftp exist,
-#     if program exists, then add the make target, if not, produce M_OFF warning.
-#     Parameters:
-#     + targetName: target name in make.
-#     + BATCH batchFile to be used in sftp. (sftp -b )
-#     + USER user: sftp user. Note that if USER is used but user is not defined.
-#       It produces M_OFF warning.
-#     + HOST_URL url: sftp server.
-#     + UPLOAD_FILES: Files to be uploaded. This will be in DEPENDS list.
-#     + REMOTE_DIR dir: Directory on the server.
-#     + OPTIONS options: sftp options.
-#     + DEPENDS files: other files that should be in DEPENDS list.
-#     + COMMENT comments: Comment to be shown when building the target.
+#   MANAGE_UPLOAD_SFTP(<targetName> 
+#       HOST_URL <url>
+#       [BATCH <batchFile>]
+#       [USER <user>] [UPLOAD_FILES <file> ...] [DEPENDS <file> ...]
+#       [REMOTE_DIR <dir>] [OPTIONS <options>]
+#       [COMMENT <comment>]
+#       [ADD_CUSTOM_TARGET_ARGS <arg> ...]
+#     )
+#     - Make an upload target using sftp. 
+#       This functions check whether sftp exists, see MANAGE_UPLOAD_TARGET 
+#       for detailed behavior.
+#       * Parameters:
+#         + targetName: target for use this command.
+#         + HOST_URL url: sftp server.
+#         + BATCH batchFile: (Optional) File of sftp batch command.
+#             If not specified, a batch file will be generated at 
+#             ${CMAKE_CURRENT_BINARY_DIR}/<targetName>-sftp-batch
+#         + USER user: (Optional) sftp user.
+#           Default: Environment variable $USER.
+#         + UPLOAD_FILES file ... : (Optional) Files to be uploaded.
+#             This will also tell cmake the build to those files,
+#             thus, <targetName> depends on those files.
+#           Default: ${SOURCE_ARCHIVE_FILE}
+#         + DEPENDS file ...: (Optional) Files that <targetName> should depends on,
+#             but no need to upload.
+#         + REMOTE_DIR dir: (Optional) Directory on the server.
+#         + OPTIONS options: (Optional) sftp options.
+#         + COMMENT comment (Optional) Comment when target is being built.
+#           Default: "<targetName>: Upload with sftp [<options>] user@url/dir/file1 ..."
+#         + ADD_CUSTOM_TARGET_ARGS <arg> ...: (Optional) Other arguments to be 
+#             passed to ADD_CUSTOM_TARGET.
+#       * Targets:
+#         + <targetName>
+#
+#
+#   MANAGE_UPLOAD_FEDORAHOSTED(<targetName> 
+#       [USER <user>]  [UPLOAD_FILES <file> ...] [DEPENDS <file> ...]
+#       [OPTIONS <options>]
+#       [COMMENT <comment>]
+#       [ADD_CUSTOM_TARGET_ARGS <arg> ...]
+#     )
+#     - Make an upload target to fedora hosted.
+#       This functions check whether scp exists, see MANAGE_UPLOAD_TARGET 
+#       for detailed behavior.
+#       * Parameters:
+#         + targetName: target for use this command.
+#         + USER user: (Optional) scp user.
+#           Default: Environment variable $USER.
+#         + UPLOAD_FILES file ... : (Optional) Files to be uploaded.
+#             This will also tell cmake the build to those files,
+#             thus, <targetName> depends on those files.
+#           Default: ${SOURCE_ARCHIVE_FILE}
+#         + DEPENDS file ...: (Optional) Files that <targetName> should depends on,
+#             but no need to upload.
+#         + OPTIONS options: (Optional) scp options.
+#         + COMMENT comment (Optional) Comment when target is being built.
+#           Default: "<targetName>: Upload with scp [<options>] user@url:dir/file1 ..."
+#         + ADD_CUSTOM_TARGET_ARGS <arg> ...: (Optional) Other arguments to be 
+#             passed to ADD_CUSTOM_TARGET.
+#       * Targets:
+#         + <targetName>
+#
+#   MANAGE_UPLOAD_SOURCEFORGE(<targetName> 
+#       [BATCH <batchFile>]
+#       [USER <user>] [UPLOAD_FILES <file> ...] [DEPENDS <file> ...]
+#       [OPTIONS <options>]
+#       [COMMENT <comment>]
+#       [ADD_CUSTOM_TARGET_ARGS <arg> ...]
+#     )
+#     - Make an upload target using sftp. 
+#       This functions check whether sftp exists, see MANAGE_UPLOAD_TARGET 
+#       for detailed behavior.
+#       * Parameters:
+#         + targetName: target for use this command.
+#         + BATCH batchFile: (Optional) File of sftp batch command.
+#             If not specified, a batch file will be generated at 
+#             ${CMAKE_CURRENT_BINARY_DIR}/<targetName>-sftp-batch
+#         + USER user: (Optional) sftp user.
+#           Default: Environment variable $USER.
+#         + UPLOAD_FILES file ... : (Optional) Files to be uploaded.
+#             This will also tell cmake the build to those files,
+#             thus, <targetName> depends on those files.
+#           Default: ${SOURCE_ARCHIVE_FILE}
+#         + DEPENDS file ...: (Optional) Files that <targetName> should depends on,
+#             but no need to upload.
+#         + OPTIONS options: (Optional) sftp options.
+#         + COMMENT comment (Optional) Comment when target is being built.
+#           Default: "<targetName>: Upload with sftp [<options>] user@url/dir/file1 ..."
+#         + ADD_CUSTOM_TARGET_ARGS <arg> ...: (Optional) Other arguments to be 
+#             passed to ADD_CUSTOM_TARGET.
+#       * Targets:
+#         + <targetName>
 #
 #   MANAGE_UPLOAD_FEDORAHOSTED(targetName 
 #     [USER user] [UPLOAD_FILES files] [OPTIONS options] [DEPENDS files]
@@ -87,121 +179,134 @@
 #
 #
 
-IF(NOT DEFINED _MANAGE_UPLOAD_CMAKE_)
-    SET(_MANAGE_UPLOAD_CMAKE_ "DEFINED")
-    INCLUDE(ManageMessage)
-    INCLUDE(ManageVariable)
+IF(DEFINED _MANAGE_UPLOAD_CMAKE_)
+    RETURN()
+ENDIF()
+SET(_MANAGE_UPLOAD_CMAKE_ "DEFINED")
 
-    FUNCTION(MANAGE_UPLOAD_TARGET targetName)
-	SET(_cmd "")
-	SET(_state "")
-	FOREACH(_arg ${ARGN})
-	    IF (_arg STREQUAL "COMMAND")
-		SET(_state "cmd")
-	    ELSE(_arg STREQUAL "COMMAND")
-		IF (_state STREQUAL "cmd")
-		    SET(_cmd "${_arg}")
-		    BREAK()
-		ENDIF(_state STREQUAL "cmd")
-	    ENDIF(_arg STREQUAL "COMMAND")
-	ENDFOREACH(_arg ${ARGN})
-	SET(_upload_target_missing_dependency 0)
-	FIND_PROGRAM_ERROR_HANDLING(UPLOAD_CMD
-	    ERROR_MSG " Upload target ${targetName} disabled."
-	    ERROR_VAR _upload_target_missing_dependency
-	    VERBOSE_LEVEL ${M_OFF}
-	    "${_cmd}"
-        )
-        IF(NOT _upload_target_missing_dependency)
-	    ADD_CUSTOM_TARGET(${targetName}
-		${ARGN}
-		)
-	ENDIF(NOT _upload_target_missing_dependency)
-    ENDFUNCTION(MANAGE_UPLOAD_TARGET targetName)
+INCLUDE(ManageMessage)
+INCLUDE(ManageString)
+INCLUDE(ManageVariable)
 
-    MACRO(_MANAGE_UPLOAD_MAKE_URL var)
-	SET(${var} ${_opt_HOST_URL})
+FUNCTION(MANAGE_UPLOAD_TARGET targetName)
+    SET(_validOptions "COMMAND" "COMMENT" "ADD_CUSTOM_TARGET_ARGS")
+    VARIABLE_PARSE_ARGN(_o _validOptions ${ARGN})
 
-	IF(NOT "${_opt_USER}" STREQUAL "")
-	    SET(${var} "${_opt_USER}@${${var}}")
-	ENDIF(NOT "${_opt_USER}" STREQUAL "")
+    LIST(GET _o_COMMAND 0 _cmd)
+    FIND_PROGRAM_ERROR_HANDLING(${targetName}_UPLOAD_EXECUTABLE
+	ERROR_MSG " Upload target ${targetName} disabled."
+	ERROR_VAR _upload_target_missing_dependency
+	VERBOSE_LEVEL ${M_OFF}
+	"${_cmd}"
+	)
 
-	IF(NOT "${_opt_REMOTE_DIR}" STREQUAL "")
-	    SET(${var} "${${var}}:${_opt_REMOTE_DIR}")
-	ENDIF(NOT "${_opt_REMOTE_DIR}" STREQUAL "")
-    ENDMACRO(_MANAGE_UPLOAD_MAKE_URL var)
+    IF("${_o_COMMENT}" STREQUAL "")
+	SET(_o "${targetName}: Upload with ${_o_COMMAND}")
+    ENDIF()
 
-    FUNCTION(MANAGE_UPLOAD_SCP targetName)
-	SET(_validOptions  "USER" "HOST_URL" "UPLOAD_FILES" "REMOTE_DIR" "OPTIONS" "DEPENDS" "COMMENT")
-	VARIABLE_PARSE_ARGN(_opt _validOptions ${ARGN})
-	IF("${_opt_HOST_URL}" STREQUAL "")
-	    M_MSG(${M_ERROR} "HOST_URL is required.")
-	ENDIF("${_opt_HOST_URL}" STREQUAL "")
-	IF("${_opt_UPLOAD_FILES}" STREQUAL "")
-	    M_MSG(${M_ERROR} "UPLOAD_FILES is required.")
-	ENDIF("${_opt_UPLOAD_FILES}" STREQUAL "")
-	_MANAGE_UPLOAD_MAKE_URL(_uploadUrl)
-
-	IF("${_opt_COMMENT}" STREQUAL "")
-	    SET(_comment "${targetName}: Uploading to ${_uploadUrl}")
-	ELSE("${_opt_COMMENT}" STREQUAL "")
-	    SET(_comment "${_opt_COMMENT}")
-	ENDIF("${_opt_COMMENT}" STREQUAL "")
-
-	MANAGE_UPLOAD_TARGET(${targetName}
-	    COMMAND scp ${_opt_OPTIONS} ${_opt_UPLOAD_FILES} ${_uploadUrl}
-	    DEPENDS ${_opt_UPLOAD_FILES} ${_opt_DEPENDS}
-	    COMMENT ${_comment}
-	    VERBATIM
+    IF(NOT _upload_target_missing_dependency)
+	ADD_CUSTOM_TARGET(${targetName}
+	    COMMAND ${_o_COMMAND}
+	    COMMENT "${_o_COMMENT}"
+	    ${_o_ADD_CUSTOM_TARGET_ARGS}
 	    )
-    ENDFUNCTION(MANAGE_UPLOAD_SCP fileAlias)
+    ENDIF()
+ENDFUNCTION(MANAGE_UPLOAD_TARGET targetName)
 
-    FUNCTION(MANAGE_UPLOAD_SFTP targetName)
-	SET(_validOptions  "USER" "HOST_URL" "UPLOAD_FILES" "REMOTE_DIR" "OPTIONS" "DEPENDS" "COMMENT" "BATCH")
-	VARIABLE_PARSE_ARGN(_opt _validOptions ${ARGN})
-	IF("${_opt_HOST_URL}" STREQUAL "")
-	    M_MSG(${M_ERROR} "HOST_URL is required.")
-	ENDIF("${_opt_HOST_URL}" STREQUAL "")
-	IF("${_opt_UPLOAD_FILES}" STREQUAL "")
-	    M_MSG(${M_ERROR} "UPLOAD_FILES is required.")
-	ENDIF("${_opt_UPLOAD_FILES}" STREQUAL "")
-	_MANAGE_UPLOAD_MAKE_URL(_uploadUrl)
+## Internal
+FUNCTION(MANAGE_UPLOAD_MAKE_URL var user url)
+    IF(NOT "${user}" STREQUAL "")
+	SET(_str "${user}@${url}")
+    ELSE()
+	SET(_str "${url}")
+    ENDIF()
+    SET(${var} "${_str}" PARENT_SCOPE)
+ENDFUNCTION(MANAGE_UPLOAD_MAKE_URL)
 
-	IF("${_opt_COMMENT}" STREQUAL "")
-	    SET(_comment "${targetName}: Uploading to ${_uploadUrl}")
-	ELSE("${_opt_COMMENT}" STREQUAL "")
-	    SET(_comment "${_opt_COMMENT}")
-	ENDIF("${_opt_COMMENT}" STREQUAL "")
 
-	IF(NOT "${_opt_BATCH}" STREQUAL "")
-	    SET(_batch "-b" "${_opt_BATCH}")
-	ENDIF(NOT "${_opt_BATCH}" STREQUAL "")
+FUNCTION(MANAGE_UPLOAD_SCP targetName)
+    SET(_validOptions "HOST_URL" "USER" 
+	"UPLOAD_FILES" "DEPENDS" "REMOTE_DIR" "OPTIONS" "COMMENT"
+	"ADD_CUSTOM_TARGET_ARGS"
+	)
+    VARIABLE_PARSE_ARGN(_o _validOptions ${ARGN})
 
-	MANAGE_UPLOAD_TARGET(${targetName}
-	    COMMAND sftp ${_batch} ${_opt_OPTIONS} ${_opt_UPLOAD_FILES} ${_uploadUrl}
-	    DEPENDS ${_opt_UPLOAD_FILES} ${_opt_DEPENDS}
-	    COMMENT ${_comment}
-	    VERBATIM
-	    )
-    ENDFUNCTION(MANAGE_UPLOAD_SFTP fileAlias)
+    IF("${_o_HOST_URL}" STREQUAL "")
+        M_MSG(${M_ERROR} "HOST_URL is required.")
+    ENDIF()
 
-    #MACRO(MANAGE_UPLOAD_GOOGLE_UPLOAD)
-    #	FIND_PROGRAM(CURL_CMD curl)
-    #	IF(CURL_CMD STREQUAL "CURL_CMD-NOTFOUND")
-    #	    MESSAGE(FATAL_ERROR "Need curl to perform google upload")
-    #	ENDIF(CURL_CMD STREQUAL "CURL_CMD-NOTFOUND")
-    #ENDMACRO(MANAGE_UPLOAD_GOOGLE_UPLOAD)
-    FUNCTION(MANAGE_UPLOAD_FEDORAHOSTED targetName)
-	MANAGE_UPLOAD_SCP(${targetName} 
-	    HOST_URL "fedorahosted.org" REMOTE_DIR  "${PROJECT_NAME}"
-	    ${ARGN})
-    ENDFUNCTION(MANAGE_UPLOAD_FEDORAHOSTED fileAlias)
+    IF("${_o_UPLOAD_FILES}" STREQUAL "")
+	SET(_o_UPLOAD_FILES "${SOURCE_ARCHIVE_FILE}")
+    ENDIF()
 
-    FUNCTION(MANAGE_UPLOAD_SOURCEFORGE targetName)
-       	MANAGE_UPLOAD_SFTP(${targetName} 
-	    HOST_URL "frs.sourceforge.net" 
-	    REMOTE_DIR  "/home/frs/project/${PROJECT_NAME}"
-	    ${ARGN})
-    ENDFUNCTION(MANAGE_UPLOAD_SOURCEFORGE fileAlias)
-ENDIF(NOT DEFINED _MANAGE_UPLOAD_CMAKE_)
+    MANAGE_UPLOAD_MAKE_URL(_uploadUrl "${_o_USER}" "${_o_HOST_URL}")
+    IF(NOT "${_o_REMOTE_DIR}" STREQUAL "")
+	STRING_APPEND(_uploadUrl ":${_o_REMOTE_DIR}")
+    ENDIF()
+
+    IF("${_o_COMMENT}" STREQUAL "")
+	SET(_o "${targetName}: Upload with scp ${_o_OPTIONS} ${_o_UPLOAD_FILES} ${_uploadUrl}")
+    ENDIF()
+
+    MANAGE_UPLOAD_TARGET(${targetName}
+	COMMAND scp ${_o_OPTIONS} ${_o_UPLOAD_FILES} ${_uploadUrl}
+	DEPENDS ${_o_UPLOAD_FILES} ${_o_DEPENDS}
+	COMMENT "${_o_COMMENTS}"
+	ADD_CUSTOM_TARGET_ARGS VERBATIM ${_o_ADD_CUSTOM_TARGET_ARGS}
+	)
+ENDFUNCTION(MANAGE_UPLOAD_SCP fileAlias)
+
+FUNCTION(MANAGE_UPLOAD_SFTP targetName)
+    SET(_validOptions "HOST_URL" "USER" 
+	"BATCH"
+	"UPLOAD_FILES" "DEPENDS" "REMOTE_DIR" "OPTIONS" "COMMENT"
+	"ADD_CUSTOM_TARGET_ARGS"
+	)
+
+    VARIABLE_PARSE_ARGN(_o _validOptions ${ARGN})
+
+    IF("${_o_HOST_URL}" STREQUAL "")
+	M_MSG(${M_ERROR} "HOST_URL is required.")
+    ENDIF()
+
+    IF("${_o_UPLOAD_FILES}" STREQUAL "")
+	SET(_o_UPLOAD_FILES "${SOURCE_ARCHIVE_FILE}")
+    ENDIF()
+
+    MANAGE_UPLOAD_MAKE_URL(_uploadUrl "${_o_USER}" "${_o_HOST_URL}")
+
+    ## Generate batch
+    IF("${_o_BATCH}" STREQUAL "")
+	SET(_o_BATCH "${CMAKE_CURRENT_BINARY_DIR}/${targetName}-sftp-batch")
+	FILE(WRITE "${_o_BATCH}" "pwd\n")
+	FOREACH(_f ${_o_UPLOAD_FILES})
+	    FILE(APPEND "${_o_BATCH}" "put -p ${_f} ${_o_REMOTE_DIR}\n")
+	ENDFOREACH()
+	FILE(APPEND "${_o_BATCH}" "bye\n")
+    ENDIF()
+
+    IF("${_o_COMMENT}" STREQUAL "")
+	SET(_o "${targetName}: Upload with scp ${_o_OPTIONS} ${_o_UPLOAD_FILES} ${_uploadUrl}")
+    ENDIF()
+
+    MANAGE_UPLOAD_TARGET(${targetName}
+	COMMAND sftp -b ${_o_BATCH} ${_o_OPTIONS} ${_uploadUrl}
+	DEPENDS ${_o_UPLOAD_FILES} ${_o_DEPENDS}
+	COMMENT "${_o_COMMENTS}"
+	ADD_CUSTOM_TARGET_ARGS VERBATIM ${_o_ADD_CUSTOM_TARGET_ARGS}
+	)
+ENDFUNCTION(MANAGE_UPLOAD_SFTP targetName)
+
+FUNCTION(MANAGE_UPLOAD_FEDORAHOSTED targetName)
+    MANAGE_UPLOAD_SCP(${targetName} 
+	HOST_URL "fedorahosted.org" REMOTE_DIR "${PROJECT_NAME}" ${ARGN}
+	)
+ENDFUNCTION(MANAGE_UPLOAD_FEDORAHOSTED)
+
+FUNCTION(MANAGE_UPLOAD_SOURCEFORGE targetName)
+    MANAGE_UPLOAD_SFTP(${targetName} 
+	HOST_URL "frs.sourceforge.net" 
+	REMOTE_DIR  "/home/frs/project/${PROJECT_NAME}"	${ARGN}
+	)
+ENDFUNCTION(MANAGE_UPLOAD_SOURCEFORGE)
 
